force-app/main/default/objects/Shipping_Manifest_Line__c/Shipping_Manifest_Line__c.object-meta.xml
<CustomObject>
    <label>Shipping Manifest Line</label>
    <nameField>
        <displayFormat>SML-{0000000000}</displayFormat>
        <label>SM Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Manifest Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>