force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Act_Unit_Cannabis_Weight__c.field-meta.xml
<CustomField>
    <fullName>Act_Unit_Cannabis_Weight__c</fullName>
    <label>Act. Unit Cannabis Weight</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>