force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Actual_Shipment_Qty__c.field-meta.xml
<CustomField>
    <fullName>Actual_Shipment_Qty__c</fullName>
    <label>Actual Shipment Qty</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>