force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID__c</fullName>
    <formula>Purchase_Order_Line__r.Batch_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>del_Batch ID</label>
    <type>Text</type>
</CustomField>