force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Cannabis_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Weight_UOM__c</fullName>
    <formula>TEXT(Product_Name__r.Cannabis_Weight_UOM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cannabis Weight UOM</label>
    <type>Text</type>
</CustomField>