force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Harvest_Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_Code__c</fullName>
    <formula>IF(!ISBLANK(Picklist_Line__c) , 
Picklist_Line__r.Inventory_Position__r.Harvest_Batch_Code__r.Name , Purchase_Order_Line__r.Harvest_Batch_Code__r.Name )</formula>
    <label>Harvest Batch Code</label>
    <type>Text</type>
</CustomField>