force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Line_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Cost__c</fullName>
    <formula>Unit_Cost__c *  Qty_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>