force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Lot_Cannabis_Category__c.field-meta.xml
<CustomField>
    <fullName>Lot_Cannabis_Category__c</fullName>
    <label>Lot Cannabis Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flower</fullName>
            </value>
            <value>
                <fullName>Leaves</fullName>
            </value>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>