force-app/main/default/objects/Shipping_Manifest_Line__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <description>Invoice_Line__r.Sales_Order_Line__r.MOQ__c</description>
    <formula>if(Sales_Order_Line__c  &lt;&gt; &apos;&apos;,  Picklist_Line__r.Sales_Order_Line__r.MOQ__c , Invoice_Line__r.Sales_Order_Line__r.MOQ__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>