force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Ownership_Code__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipping Manifest Lines</relationshipLabel>
    <relationshipName>Shipping_Manifest_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>