force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Shipping Manifest Lines</relationshipLabel>
    <relationshipName>Shipping_Manifest_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>