force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Quantity_Cases__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Cases__c</fullName>
    <description>Invoice_Line__r.Quantity_Cases__c -&gt; Sales_Order_Line__r.Quantity_Cases__c</description>
    <formula>Picklist_Line__r.Qty_to_Pick__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity or Cases</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>