force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <inlineHelpText>When line is rejection in full or in partial enter rejection reason</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rejection_Reason</valueSetName>
    </valueSet>
</CustomField>