force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Shipping Manifest Lines</relationshipLabel>
    <relationshipName>Shipping_Manifest_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>