force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Shipment_Qty__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Qty__c</fullName>
    <label>Shipment Qty</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>