force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Shipping_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Manifest__c</fullName>
    <label>Shipping Manifest</label>
    <referenceTo>Shipping_Manifest__c</referenceTo>
    <relationshipLabel>Shipping Manifest Lines</relationshipLabel>
    <relationshipName>Shipping_Manifest_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>