force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Subtotal_Cannabis_Weight__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Cannabis_Weight__c</fullName>
    <label>Subtotal Cannabis Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>