force-app/main/default/objects/Shipping_Manifest_Line__c/fields/Total_Return_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Return_Qty__c</fullName>
    <label>Total Return Qty</label>
    <summarizedField>Return_Line__c.Return_Qty__c</summarizedField>
    <summaryFilterItems>
        <field>Return_Line__c.Return_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Return_Line__c.Shipping_Manifest_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>