force-app/main/default/objects/Shipping_Manifest_Line__c/fields/UID_1__c.field-meta.xml
<CustomField>
    <fullName>UID_1__c</fullName>
    <formula>IF(!ISBLANK(Picklist_Line__c) ,
 Picklist_Line__r.Pack_out_UID__r.Name   ,   Null)</formula>
    <label>UID</label>
    <type>Text</type>
</CustomField>