force-app/main/default/objects/Shipping_Manifest_Line__c/recordTypes/Cash_Collection_Line.recordType-meta.xml
<RecordType>
    <fullName>Cash_Collection_Line</fullName>
    <active>true</active>
    <description>Used for Cash Collection</description>
    <label>Cash Collection Line</label>
</RecordType>