force-app/main/default/objects/Shipping_Manifest_Line__c/recordTypes/Lab_Line.recordType-meta.xml
<RecordType>
    <fullName>Lab_Line</fullName>
    <active>true</active>
    <description>Used for Lab Test Sampling - Ship Confirm to &quot;Test Sampled&quot; Inventory Location</description>
    <label>Lab Line</label>
</RecordType>