force-app/main/default/objects/Shipping_Manifest_Line__c/recordTypes/Product_TSM_Line.recordType-meta.xml
<RecordType>
    <fullName>Product_TSM_Line</fullName>
    <active>true</active>
    <description>Created from PO - Receive Confirm Has No Inventory Movement, Rename to &quot;Product&quot;</description>
    <label>Product TSM Line</label>
</RecordType>