force-app/main/default/objects/Shipping_Manifest_Line__c/recordTypes/RMA.recordType-meta.xml
<RecordType>
    <fullName>RMA</fullName>
    <active>true</active>
    <label>RMA</label>
</RecordType>