force-app/main/default/objects/Shipping_Manifest_Line__c/recordTypes/RSM_Line.recordType-meta.xml
<RecordType>
    <fullName>RSM_Line</fullName>
    <active>true</active>
    <description>Used for Retail Shipments - Ship Confirm to &quot;Delivered&quot; Inventory Location, Rename to &quot;Retail&quot;</description>
    <label>RSM Line</label>
</RecordType>