force-app/main/default/objects/Shipping_Manifest_Line__c/recordTypes/Service_Line.recordType-meta.xml
<RecordType>
    <fullName>Service_Line</fullName>
    <active>true</active>
    <description>Used for Transfer Services - Manually Created, Transfer Confirm Has No Inventory Movement</description>
    <label>Service Line</label>
</RecordType>