force-app/main/default/objects/Shipping_Manifest_Line__c/recordTypes/Transfer_Line.recordType-meta.xml
<RecordType>
    <fullName>Transfer_Line</fullName>
    <active>true</active>
    <description>Used for Outbound Transfer Non-Retail Channel - Ship Confirm to &quot;Transferred&quot; Inventory Location</description>
    <label>Transfer Line</label>
</RecordType>